agregado de csvs de model

--- a/notebooks/ETL.ipynb
+++ b/notebooks/ETL.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Eliminamos las columnas que no vamos a utilizar\n",
+    "# Eliminamos las columnas que no son reelevantes para este proyecto\n",
     "columns_to_delete = [\n",
     "    \"video\",\n",
     "    \"imdb_id\",\n",
@@ -228,6 +228,16 @@
     "    \"original_title\",\n",
     "    \"poster_path\",\n",
     "    \"homepage\",\n",
+    "    \"belongs_to_collection\",\n",
+    "    \"genres\",\n",
+    "    \"original_language\",\n",
+    "    \"production_companies\",\n",
+    "    \"production_countries\",\n",
+    "    \"spoken_languages\",\n",
+    "    \"status\",\n",
+    "    \"tagline\",\n",
+    "    \"runtime\"\n",
+    "\n",
     "]\n",
     "df = df.drop(columns=columns_to_delete)"
    ]
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,12 +282,22 @@
     "            \n",
     "    return df\n",
     "\n",
-    "df_credits_evaluated = row_to_dict(df_credits)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluamos las filas del dataframe df_credits\n",
+    "df_credits_evaluated = row_to_dict(df_credits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,35 +339,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mergeamos el df y df_credits sobre la columna id para crear un dataframe con las columnas crew y cast\n",
-    "movies_merged_df = df.merge(df_credits, on='id')"
+    "# Eliminamos las columnas que no son reelevantes para este proyecto del dataframe cast\n",
+    "columns_to_delete_cast = [\n",
+    "    \"cast_id\",\n",
+    "    \"character\",\n",
+    "    \"credit_id\",\n",
+    "    \"gender\",\n",
+    "    \"order\",\n",
+    "    \"profile_path\",\n",
+    "\n",
+    "]\n",
+    "df_cast = df_unnested_cast.drop(columns=columns_to_delete_cast)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filtramos las filas del df_unnested_crew donde el trabajo es director y lo guardamos en un dataframe llamado df_director\n",
+    "df_director = df_unnested_crew[df_unnested_crew['job'] == 'Director']  \n",
+    "\n",
+    "#Eliminamos las columnas que no son reelevantes para este proyecto del dataframe df_director\n",
+    "columns_to_delete_director = [\n",
+    "    \"credit_id\",\n",
+    "    \"department\",\n",
+    "    \"gender\",\n",
+    "    \"job\",\n",
+    "    \"profile_path\",\n",
+    "\n",
+    "]\n",
+    "df_director = df_director.drop(columns=columns_to_delete_director)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creamos un dataframe de muestra para reducir el tiempo de procesamiento ya que la capacidad de render es limitada\n",
-    "sample = movies_merged_df.sample(n=1000, random_state=42).reset_index(drop=True)  # n es el número de filas de la muestra"
+    "sample = df.sample(n=10000, random_state=42).reset_index(drop=True)  # n es el número de filas de la muestra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creamos los csv en base a los dataframes creados\n",
-    "#movies_merged_df.to_csv('../datasets/model/movies_merged.csv',index=False)\n",
-    "df_unnested_cast.to_csv('../datasets/model/cast.csv',index=False)\n",
-    "df_unnested_crew.to_csv('../datasets/model/crew.csv',index=False)\n",
-    "df.to_csv('../datasets/model/movies.csv',index=False)\n",
+    "# Creamos los csv en base a los dataframes creado\n",
+    "df_cast.to_csv('../datasets/model/cast.csv', index=False)\n",
+    "df_director.to_csv('../datasets/model/director.csv', index=False)\n",
+    "df.to_csv('../datasets/model/movies.csv', index=False)\n",
     "sample.to_csv('../datasets/model/sample.csv',index=False)"
    ]
   }
