--- a/notebooks/funciones.ipynb
+++ b/notebooks/funciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,32 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Importamos los dataset y los convertimos a dataframe para poder trabajar con ellos\n",
-    "df = pd.read_csv(\"./datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
-    "movies_merged_df = pd.read_csv(\"./datasets/model/movies_merged.csv\", sep=\",\", low_memory=False)\n",
-    "df_crew = pd.read_csv(\"./datasets/model/crew.csv\", sep=\",\", low_memory=False)\n",
-    "df_cast = pd.read_csv(\"./datasets/model/cast.csv\", sep=\",\", low_memory=False)\n",
-    "df_sample = pd.read_csv(\"./datasets/model/sample.csv\", sep=\",\", low_memory=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cantidad_filmaciones_mes(Mes:str):\n",
     "    \"Se ingresa un mes en idioma Español. Devuelve la cantidad de películas que fueron estrenadas en el mes consultado en la totalidad del dataset.\"\n",
     "\n",
+    "    # Cargando datos del archivo csv\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
+    "\n",
+    "    \n",
     "    def obtain_month_number(Mes):\n",
     "        months = {\n",
     "            \"enero\": 1,\n",
     "            \"febrero\": 2,\n",
-    "            \"marzo\": 3,\n",
+    "            \"marzo\": 3, \n",
     "            \"abril\": 4,\n",
     "            \"mayo\": 5,\n",
     "            \"junio\": 6,\n",
@@ -86,13 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cantidad_filmaciones_dia(Dia:str):\n",
     "    \"Se ingresa un día en idioma Español. Devuelve la cantidad de películas que fueron estrenadas en día consultado en la totalidad del dataset.\"\n",
     "\n",
+    "    # Cargando datos del archivo csv\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
+    "    \n",
     "    def obtain_day_number(Dia):\n",
     "        days = {\n",
     "            \"lunes\": 1,\n",
@@ -136,13 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def score_titulo(titulo_de_la_filmación:str):\n",
     "    \"Se ingresa el título de una filmación devuelve como respuesta el título, el año de estreno y el score\"\n",
     "\n",
+    "    # Cargando datos del archivo csv\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
+    "    \n",
     "    response =[ ]\n",
     "    for idx, row in enumerate(df[\"title\"]):  # Recorremos los valores de la columna title\n",
     "        if (row.lower() == titulo_de_la_filmación.lower()):  # Si el valor de la fila se encuentra dentro de la columna se guarda en la lista response en forma de diccionario\n",
@@ -161,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +165,10 @@
     "    \"\"\"Se ingresa el título de una filmación esperando como respuesta el título, la cantidad de votos y el valor promedio de las votaciones.\n",
     "    La misma variable deberá de contar con al menos 2000 valoraciones, caso contrario, debemos contar con un mensaje avisando que no cumple esta condición y que por ende,\n",
     "    no se devuelve ningun valor.\"\"\"\n",
+    "\n",
+    "    # Cargando datos del archivo csv\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
+    "    \n",
     "    response = []\n",
     "    for idx, row in enumerate(df['title']):\n",
     "        if (row.lower() == titulo_de_la_filmación.lower()):\n",
@@ -189,14 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_actor(nombre_actor:str):\n",
     "    \"\"\"Se ingresa el nombre de un actor que se encuentre dentro de un dataset debiendo devolver el éxito del mismo medido a través del retorno. \n",
     "    Además, la cantidad de películas que en las que ha participado y el promedio de retorno\"\"\"\n",
-    "    \n",
+    "\n",
+    "    # Cargando datos de los archivos csv\n",
+    "    df_cast = pd.read_csv(\"../datasets/model/cast.csv\", sep=\",\", low_memory=False)\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
     "    # Creamos una lista para almacenar los valores de 'movie_id'\n",
     "    lista_movie_id = []\n",
     "\n",
@@ -230,20 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_director(nombre_director:str):\n",
     "    ''' Se ingresa el nombre de un director que se encuentre dentro de un dataset debiendo devolver el éxito del mismo medido a través del retorno. \n",
     "    Además, deberá devolver el nombre de cada película con la fecha de lanzamiento, retorno individual, costo y ganancia de la misma.'''\n",
-    "    \n",
+    "\n",
+    "    # Cargando datos de los archivos csv\n",
+    "    df_director = pd.read_csv(\"../datasets/model/director.csv\", sep=\",\", low_memory=False)\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
     "    \n",
     "    # Creamos una lista para almacenar los valores de 'movie_id'\n",
     "    lista_movie_id = []\n",
     "\n",
     "    # Buscamos el valor en la columna 'name' y extraemos el valor correspondiente en 'movie_id'\n",
-    "    filas_encontradas = df_crew.loc[(df_crew['name'].str.lower() == nombre_director.lower()) & (df_crew['job'].str.lower() == 'director')]\n",
+    "    filas_encontradas = df_director.loc[(df_director['name'].str.lower() == nombre_director.lower())]\n",
     "    \n",
     "    # Iterar sobre las filas encontradas y extraer los valores de 'movie_id'\n",
     "    for index, row in filas_encontradas.iterrows():\n",
@@ -282,12 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def recomendacion(titulo:str):\n",
-    "    if (df_sample['title'].str.lower()).isin([titulo.lower()]).any():\n",
+    "    '''Ingresas un nombre de pelicula y te recomienda las cinco más similares en una lista'''\n",
+    "    # Cargando datos del archivo csv\n",
+    "    df = pd.read_csv(\"../datasets/model/sample.csv\", sep=\",\", low_memory=False)\n",
+    "\n",
+    "\n",
+    "    if (df['title'].str.lower()).isin([titulo.lower()]).any():\n",
     "\n",
     "        tfv = TfidfVectorizer(min_df=3,  max_features=None,\n",
     "                strip_accents='unicode', analyzer='word',token_pattern=r'\\w{1,}',\n",
@@ -295,14 +306,14 @@
     "                stop_words = 'english')\n",
     "        \n",
     "        # Ajustamos el TF-IDF sobre el texto 'overview'\n",
-    "        tfv_matrix = tfv.fit_transform(df_sample['overview'])\n",
+    "        tfv_matrix = tfv.fit_transform(df['overview'])\n",
     "\n",
     "        # Computamos el kernel sigmoide\n",
     "        sig = sigmoid_kernel(tfv_matrix, tfv_matrix)\n",
     "        \n",
     "        \n",
     "        # Hacemos reverse mapping de los indices y los títulos de las películas\n",
-    "        indices = pd.Series(df_sample.index, index=df_sample['title'].str.lower()).drop_duplicates()\n",
+    "        indices = pd.Series(df.index, index=df['title'].str.lower()).drop_duplicates()\n",
     "\n",
     "        # Obtenemos el indice de la película\n",
     "        idx = indices[titulo.lower()]\n",
@@ -320,55 +331,13 @@
     "        movie_indices = [i[0] for i in sig_scores]\n",
     "\n",
     "        # Guardamos los títulos de las películas en una variable para después mostrarla\n",
-    "        valores_columna = df_sample.loc[movie_indices, 'title'].values\n",
+    "        valores_columna = df.loc[movie_indices, 'title'].values\n",
     "\n",
     "        response = list(valores_columna)\n",
     "        return response\n",
     "    else:\n",
     "        return print(f\"La película {titulo} no está en la lista, por favor ingrese otra.\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                  People in the Sun\n",
-       "1    Kizumonogatari Part 1: Tekketsu\n",
-       "2                  The Hurt Business\n",
-       "3       Tripping the Rift: The Movie\n",
-       "4                   Fateful Findings\n",
-       "Name: title, dtype: object"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_sample['title'].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La película asds no está en la lista, por favor ingrese otra.\n"
-     ]
-    }
-   ],
-   "source": [
-    "recomendacion('asds')"
    ]
   }
  ],
@@ -388,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
