automatizacion ingesta de csv

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -12,7 +12,8 @@
     "import ast\n",
     "from datetime import datetime\n",
     "from sklearn.metrics.pairwise import sigmoid_kernel\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import os"
    ]
   },
   {
@@ -21,13 +22,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importamos el dataset credits y los convertimos a dataframe para poder trabajar con él\n",
-    "df_movies = pd.read_csv(\"./datasets/raw/movies_dataset.csv\", sep=\",\", low_memory=False)"
+    "# Asignamos el path relativo a la variable dir para utilizarla a la hora de consumir los datasets\n",
+    "# Obtener el path actual\n",
+    "current_path = os.getcwd()\n",
+    "\n",
+    "# Obtener el path de la carpeta anterior\n",
+    "dir = os.path.abspath(os.path.join(current_path, os.pardir))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importamos el dataset credits y los convertimos a dataframe para poder trabajar con él\n",
+    "df_movies = pd.read_csv(dir+\"/datasets/raw/movies_dataset.csv\", sep=\",\", low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -478,12 +493,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adult</th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>...</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>video</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>676</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>105045</td>\n",
+       "      <td>tt0111613</td>\n",
+       "      <td>de</td>\n",
+       "      <td>Das Versprechen</td>\n",
+       "      <td>East-Berlin, 1961, shortly after the erection ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-02-16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>[{'iso_639_1': 'de', 'name': 'Deutsch'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>A love, a hope, a wall.</td>\n",
+       "      <td>The Promise</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>838</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>132641</td>\n",
+       "      <td>tt0046468</td>\n",
+       "      <td>ja</td>\n",
+       "      <td>Tsuma</td>\n",
+       "      <td>Ten years into a marriage, the wife is disappo...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1953-04-29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>[{'iso_639_1': 'ja', 'name': '日本語'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>949</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22649</td>\n",
+       "      <td>tt0022879</td>\n",
+       "      <td>en</td>\n",
+       "      <td>A Farewell to Arms</td>\n",
+       "      <td>British nurse Catherine Barkley (Helen Hayes) ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1932-12-08</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Every woman who has loved will understand</td>\n",
+       "      <td>A Farewell to Arms</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1465</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>105045</td>\n",
+       "      <td>tt0111613</td>\n",
+       "      <td>de</td>\n",
+       "      <td>Das Versprechen</td>\n",
+       "      <td>East-Berlin, 1961, shortly after the erection ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-02-16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>[{'iso_639_1': 'de', 'name': 'Deutsch'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>A love, a hope, a wall.</td>\n",
+       "      <td>The Promise</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2564</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 99, 'name': 'Documentary'}]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>84198</td>\n",
+       "      <td>tt1736049</td>\n",
+       "      <td>en</td>\n",
+       "      <td>A Place at the Table</td>\n",
+       "      <td>Using personal stories, this powerful document...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2012-03-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>One Nation. Underfed.</td>\n",
+       "      <td>A Place at the Table</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      adult belongs_to_collection budget  \\\n",
+       "676   False                   NaN      0   \n",
+       "838   False                   NaN      0   \n",
+       "949   False                   NaN      4   \n",
+       "1465  False                   NaN      0   \n",
+       "2564  False                   NaN      0   \n",
+       "\n",
+       "                                                 genres homepage      id  \\\n",
+       "676   [{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...      NaN  105045   \n",
+       "838                       [{'id': 18, 'name': 'Drama'}]      NaN  132641   \n",
+       "949   [{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...      NaN   22649   \n",
+       "1465  [{'id': 18, 'name': 'Drama'}, {'id': 10749, 'n...      NaN  105045   \n",
+       "2564                [{'id': 99, 'name': 'Documentary'}]      NaN   84198   \n",
+       "\n",
+       "        imdb_id original_language        original_title  \\\n",
+       "676   tt0111613                de       Das Versprechen   \n",
+       "838   tt0046468                ja                 Tsuma   \n",
+       "949   tt0022879                en    A Farewell to Arms   \n",
+       "1465  tt0111613                de       Das Versprechen   \n",
+       "2564  tt1736049                en  A Place at the Table   \n",
+       "\n",
+       "                                               overview  ... release_date  \\\n",
+       "676   East-Berlin, 1961, shortly after the erection ...  ...   1995-02-16   \n",
+       "838   Ten years into a marriage, the wife is disappo...  ...   1953-04-29   \n",
+       "949   British nurse Catherine Barkley (Helen Hayes) ...  ...   1932-12-08   \n",
+       "1465  East-Berlin, 1961, shortly after the erection ...  ...   1995-02-16   \n",
+       "2564  Using personal stories, this powerful document...  ...   2012-03-22   \n",
+       "\n",
+       "     revenue runtime                          spoken_languages    status  \\\n",
+       "676      0.0   115.0  [{'iso_639_1': 'de', 'name': 'Deutsch'}]  Released   \n",
+       "838      0.0    89.0      [{'iso_639_1': 'ja', 'name': '日本語'}]  Released   \n",
+       "949     25.0    89.0  [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "1465     0.0   115.0  [{'iso_639_1': 'de', 'name': 'Deutsch'}]  Released   \n",
+       "2564     0.0    84.0  [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "\n",
+       "                                        tagline                 title  video  \\\n",
+       "676                     A love, a hope, a wall.           The Promise  False   \n",
+       "838                                         NaN                  Wife  False   \n",
+       "949   Every woman who has loved will understand    A Farewell to Arms  False   \n",
+       "1465                    A love, a hope, a wall.           The Promise  False   \n",
+       "2564                      One Nation. Underfed.  A Place at the Table  False   \n",
+       "\n",
+       "     vote_average vote_count  \n",
+       "676           5.0        1.0  \n",
+       "838           0.0        0.0  \n",
+       "949           6.2       29.0  \n",
+       "1465          5.0        1.0  \n",
+       "2564          6.9        7.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Identificar filas duplicadas en base a la columna id\n",
-    "duplicate_rows = df_movies[df_movies.duplicated(subset='id', keep=False)]\n"
+    "duplicate_rows = df_movies[df_movies.duplicated(subset='id', keep=False)]\n",
+    "\n",
+    "duplicate_rows.head()\n"
    ]
   },
   {
@@ -527,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
