correccion funcion score_titulo

--- a/notebooks/funciones.ipynb
+++ b/notebooks/funciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,15 @@
     "from sklearn.metrics.pairwise import sigmoid_kernel\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)"
    ]
   },
   {
@@ -196,7 +205,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Opcion dos\n",
+    "\n",
+    "def score_titulo(titulo_de_la_filmación:str):\n",
+    "    \"Se ingresa el título de una filmación devuelve como respuesta el título, el año de estreno y el score\"\n",
+    "\n",
+    "    # Cargando datos del archivo csv\n",
+    "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
+    "    \n",
+    "    response = []\n",
+    "\n",
+    "    for row in df[\"title\"]:\n",
+    "        if row.lower() == titulo_de_la_filmación.lower():\n",
+    "            idx = df[\"title\"].tolist().index(row)  # Obtener el índice correspondiente al valor de la fila\n",
+    "            response.append({\n",
+    "                \"título\": df[\"title\"][idx],\n",
+    "                \"anio\": df[\"release_year\"][idx],\n",
+    "                \"popularidad\": df[\"popularity\"][idx]\n",
+    "            })\n",
+    "\n",
+    "    if len(response) == 0: # Si la lista está vacía quiere decir que no se encontró ningun valor, devuelve el siguiente mensaje.\n",
+    "        return print(f\"La película {titulo_de_la_filmación} no se encontró, por favor ingrese otra.\")\n",
+    "    else:\n",
+    "        return response\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'título': 'Hulk', 'anio': 2003, 'popularidad': 15.422638}]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_titulo('hulk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +270,8 @@
     "    df = pd.read_csv(\"../datasets/model/movies.csv\", sep=\",\", low_memory=False)\n",
     "    \n",
     "    response = []\n",
-    "    for idx, row in enumerate(df['title']):\n",
+    "\n",
+    "    for idx, row in enumerate(df[\"title\"]):\n",
     "        if (row.lower() == titulo_de_la_filmación.lower()):\n",
     "            if df['vote_count'][idx] >= 2000:\n",
     "                response.append({\n",
@@ -224,6 +286,29 @@
     "    \n",
     "    else:\n",
     "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'título': 'Titanic',\n",
+       "  'anio': 1997,\n",
+       "  'voto_total': 7770.0,\n",
+       "  'voto_promedio': 7.5}]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "votos_titulo('titanic')"
    ]
   },
   {
@@ -272,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +408,132 @@
     "                'peliculas':movies_list_dict}\n",
     "    \n",
     "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'director': 'tim burton',\n",
+       " 'retorno_total_director': 61.21790076693029,\n",
+       " 'peliculas': [{'titulo': 'Ed Wood',\n",
+       "   'anio': 1994,\n",
+       "   'retorno_pelicula': 0.3270809444444444,\n",
+       "   'budget_pelicula': 18000000.0,\n",
+       "   'revenue_pelicula': 5887457.0},\n",
+       "  {'titulo': 'Batman',\n",
+       "   'anio': 1989,\n",
+       "   'retorno_pelicula': 11.7528264,\n",
+       "   'budget_pelicula': 35000000.0,\n",
+       "   'revenue_pelicula': 411348924.0},\n",
+       "  {'titulo': 'Batman Returns',\n",
+       "   'anio': 1992,\n",
+       "   'retorno_pelicula': 3.5,\n",
+       "   'budget_pelicula': 80000000.0,\n",
+       "   'revenue_pelicula': 280000000.0},\n",
+       "  {'titulo': 'Mars Attacks!',\n",
+       "   'anio': 1996,\n",
+       "   'retorno_pelicula': 1.4481573857142858,\n",
+       "   'budget_pelicula': 70000000.0,\n",
+       "   'revenue_pelicula': 101371017.0},\n",
+       "  {'titulo': 'Beetlejuice',\n",
+       "   'anio': 1988,\n",
+       "   'retorno_pelicula': 4.8884444,\n",
+       "   'budget_pelicula': 15000000.0,\n",
+       "   'revenue_pelicula': 73326666.0},\n",
+       "  {'titulo': 'Edward Scissorhands',\n",
+       "   'anio': 1990,\n",
+       "   'retorno_pelicula': 2.65,\n",
+       "   'budget_pelicula': 20000000.0,\n",
+       "   'revenue_pelicula': 53000000.0},\n",
+       "  {'titulo': 'Sleepy Hollow',\n",
+       "   'anio': 1999,\n",
+       "   'retorno_pelicula': 2.06071502,\n",
+       "   'budget_pelicula': 100000000.0,\n",
+       "   'revenue_pelicula': 206071502.0},\n",
+       "  {'titulo': \"Pee-wee's Big Adventure\",\n",
+       "   'anio': 1985,\n",
+       "   'retorno_pelicula': 6.823443666666667,\n",
+       "   'budget_pelicula': 6000000.0,\n",
+       "   'revenue_pelicula': 40940662.0},\n",
+       "  {'titulo': 'Planet of the Apes',\n",
+       "   'anio': 2001,\n",
+       "   'retorno_pelicula': 3.6221174,\n",
+       "   'budget_pelicula': 100000000.0,\n",
+       "   'revenue_pelicula': 362211740.0},\n",
+       "  {'titulo': 'Big Fish',\n",
+       "   'anio': 2003,\n",
+       "   'retorno_pelicula': 1.7559865,\n",
+       "   'budget_pelicula': 70000000.0,\n",
+       "   'revenue_pelicula': 122919055.0},\n",
+       "  {'titulo': 'Charlie and the Chocolate Factory',\n",
+       "   'anio': 2005,\n",
+       "   'retorno_pelicula': 3.16645842,\n",
+       "   'budget_pelicula': 150000000.0,\n",
+       "   'revenue_pelicula': 474968763.0},\n",
+       "  {'titulo': 'Vincent',\n",
+       "   'anio': 1982,\n",
+       "   'retorno_pelicula': 0.0,\n",
+       "   'budget_pelicula': 60000.0,\n",
+       "   'revenue_pelicula': 0.0},\n",
+       "  {'titulo': 'Corpse Bride',\n",
+       "   'anio': 2005,\n",
+       "   'retorno_pelicula': 2.929876525,\n",
+       "   'budget_pelicula': 40000000.0,\n",
+       "   'revenue_pelicula': 117195061.0},\n",
+       "  {'titulo': 'Sweeney Todd: The Demon Barber of Fleet Street',\n",
+       "   'anio': 2007,\n",
+       "   'retorno_pelicula': 3.04,\n",
+       "   'budget_pelicula': 50000000.0,\n",
+       "   'revenue_pelicula': 152000000.0},\n",
+       "  {'titulo': 'Alice in Wonderland',\n",
+       "   'anio': 2010,\n",
+       "   'retorno_pelicula': 5.12745555,\n",
+       "   'budget_pelicula': 200000000.0,\n",
+       "   'revenue_pelicula': 1025491110.0},\n",
+       "  {'titulo': 'Dark Shadows',\n",
+       "   'anio': 2012,\n",
+       "   'retorno_pelicula': 1.63684766,\n",
+       "   'budget_pelicula': 150000000.0,\n",
+       "   'revenue_pelicula': 245527149.0},\n",
+       "  {'titulo': 'Frankenweenie',\n",
+       "   'anio': 2012,\n",
+       "   'retorno_pelicula': 0.9048150769230768,\n",
+       "   'budget_pelicula': 39000000.0,\n",
+       "   'revenue_pelicula': 35287788.0},\n",
+       "  {'titulo': 'Big Eyes',\n",
+       "   'anio': 2014,\n",
+       "   'retorno_pelicula': 2.8883511,\n",
+       "   'budget_pelicula': 10000000.0,\n",
+       "   'revenue_pelicula': 28883511.0},\n",
+       "  {'titulo': 'Hansel and Gretel',\n",
+       "   'anio': 1982,\n",
+       "   'retorno_pelicula': 0.0,\n",
+       "   'budget_pelicula': 116000.0,\n",
+       "   'revenue_pelicula': 0.0},\n",
+       "  {'titulo': \"Miss Peregrine's Home for Peculiar Children\",\n",
+       "   'anio': 2016,\n",
+       "   'retorno_pelicula': 2.6953247181818183,\n",
+       "   'budget_pelicula': 110000000.0,\n",
+       "   'revenue_pelicula': 296485719.0},\n",
+       "  {'titulo': 'Frankenweenie',\n",
+       "   'anio': 1984,\n",
+       "   'retorno_pelicula': 0.0,\n",
+       "   'budget_pelicula': 1000000.0,\n",
+       "   'revenue_pelicula': 0.0}]}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_director('tim burton')"
    ]
   },
   {
